feat: Se sube estructura de html y css de eventos y la imgen con descripcion de evento2

--- a/index.html
+++ b/index.html
@@ -4,8 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Team2PerroEventos</title>
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    
+    <section aria-label="Eventos destacados">
+        <h2>Eventos</h2>
+        <div class="event-grid">
+          <article class="event-card">
+            <img src="https://www.infobae.com/resizer/v2/AK2X4ICTDZELPPOF3CWT5RVA4U.jpeg?auth=a46438a02352268ebca36afeed5c774fb39a111bfe2a4e6f275ad113d20cb157&smart=true&width=992&height=850&quality=85" alt="Lineup Oficial del Tecate Emblema 2025">
+            <div class="event-content">
+              <h3>Tecate Emblema 2025</h3>
+              <p>¿Qué es el Tecate Emblema?
+                Es el festival de música que se celebra anualmente en la Ciudad de México. Desde su primera edición, ha logrado reunir a artistas de talla internacional como Backstreet Boy, Gwen Stefani, Sebastian Yatra, Robbie Williams, Black Eye Peas, Enrique Iglesias, entre otros</p>
+            </div>
+          </article>
+        </div>
+      </section>
+      
 </body>
 </html>
