--- a/index.html
+++ b/index.html
@@ -6,6 +6,41 @@
     <title>Team2PerroEventos</title>
 </head>
 <body>
+
+    <section class="tarjeta-evento4">
+
+        <h2> Concierto Dale MIXX 2025 </h2>
+        <h3> 16 de agosto  </h3>
+        <h4> Mnterrey, Nuevo León </h4>
+        <img class="img-evento4" src="https://www.dalemixx.com.mx/img/poster/poster.jpg" alt="evento">
+        <p>
+            El festival Dale Mixx 2025 se celebrará el sábado 16 de agosto en el Parque Fundidora de Monterrey, Nuevo León. Este evento es reconocido por reunir a destacados exponentes de la música urbana y latina, ofreciendo una experiencia vibrante para los asistentes.
+
+        </p>
+        <style>
+            .tarjeta-evento4 {
+    max-width: 800px;
+    margin: 20px auto;
+    background: white;
+    padding: 20px;
+    border-radius: 12px;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+    line-height: 1.6;
+    animation: fadeInUp 1s ease-out;
+}
+
+.img-evento4 {
+    display: block;
+    margin: 100px auto;
+    max-width: 200px;
+    border-radius: 50%;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+    animation: fadeInUp 1s ease-out;
+}
+
+        </style>
+
+    </section>
     
 </body>
 </html>
