"feat:se añade pie de pagina"

--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Team2PerroEventos</title>
-    <link rel="stylesheet" href="style.css">
-
-    <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
@@ -141,3 +138,24 @@
 </body>
 
 </html>
+
+<footer>
+    
+    <h2> Contacto</h2>
+    <ul>
+        <li>Telefono: 33145950509</li>
+        <li>Mail: perroeventos@eventosmx.com </li>
+        <li>Direccion:<a href=https://www.google.com.mx/maps/place/Parque+Metropolitano+de+Guadalajara/@20.6802178,-103.4425787,17.83z/data=!4m6!3m5!1s0x8428afae47dd1f1d:0x21e17343a6840061!8m2!3d20.6796425!4d-103.4413567!16s%2Fg%2F11jv74xh4v?entry=ttu&g_ep=EgoyMDI1MDUwNS4wIKXMDSoASAFQAw%3D%3D target="_blank">
+            Ver ubicación en el mapa
+          </a></li>
+          <li><a href="https://facebook.com/tuusuario" target="_blank">
+            <i class="fab fa-facebook"></i>
+          </a></li>
+          <li><a href="https://instagram.com/tuusuario" target="_blank">
+            <i class="fab fa-instagram"></i></li>
+          </a>
+       </ul>
+       <br>
+       <p>&copy;PerroEventos. Todos los derechos reservados. </p>
+    
+</footer>
