feat: se añade info de evento 3

--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
     <title>Team2PerroEventos</title>
 </head>
 <body>
-    
+    <section>
+        <h2>
+            Tiesto
+        </h2>
+        <img id="Tiesto-poster" src="https://media.ticketmaster.com/tm/en-us/dam/a/d09/cc9a4c31-b329-40d5-ab4a-4a24fcc51d09_EVENT_DETAIL_PAGE_16_9.jpg">
+        <h3>
+            en el palacio de los deportes CDMX
+        </h3>
+        <p>
+            El proximo sabado 14 de junio TIËSTO traerá su Prismatic DJ set que tiene una duración de 4 horas. 
+            El jueves 6 de marzo la venta anticipada será para aquellos que además de contar con una tarjeta de crédito HSBC, 
+            también tengan alguna cuenta de débito con la mencionada institución bancaria.
+            A partir del viernes 7 de marzo la venta será general y el público podrá comprar sus boletos con cualquier tipo de tarjeta o banco.
+            El precio de los boletos ira desde los 940$ hasta los 4260$.
+        </p>
+    </section>
 </body>
 </html>
